# AI-Boosting

./: CMakeLists.txt
results/: all_models_comparison.md
src/data_clean/: CMakeLists.txt
src/ensemble/bagging/: CMakeLists.txt  bagging.cpp  bagging.h
src/ensemble/boosting/: CMakeLists.txt  boosting.cpp  boosting.h
src/functions/math/: math_functions.cpp  math_functions.h
src/functions/neuralnet/: CMakeLists.txt  neuralnet.cpp  neuralnet.h
src/main/: main.cpp  main_comparison.cpp  utility.cpp  utility.h
src/model_comparison/: CMakeLists.txt
src/pipeline/: CMakeLists.txt  model_params.cpp  model_params.h  run_models.cpp  run_models.h
